--- a/public/index.html
+++ b/public/index.html
@@ -14,18 +14,18 @@
 
 </head>
 
-<!-- TODO Add a directive to the body element in order to 
-  bootstrap your Angular app. Be sure to use the name 'app' 
+<!-- √ TODO Add a directive to the body element in order to
+  bootstrap your Angular app. Be sure to use the name 'app'
   so that the provided Angular routes function properly. -->
-<body>
+<body ng-app="app">
 
   <div class="grid-container">
 
     <div class="grid-100">
       <h1>
-        <img src="images/chefbot.svg" height="60px">
+        <img src="images/chefbot.svg" height="100px">
         <br>
-        My Recipes
+        Yum Recipes
       </h1>
     </div>
 
@@ -34,7 +34,7 @@
       <div class="recipes">
 
         <!-- The ng-view Angular directive is used to tell the Angular router
-              where requested views should be loaded. Removing this directive 
+              where requested views should be loaded. Removing this directive
               will cause routing to not function properly. -->
         <div ng-view></div>
 
@@ -46,10 +46,13 @@
 
   <script src="vendor/angular.js"></script>
   <script src="vendor/angular-route.js"></script>
-  
-  <!-- TODO Add script tags for your JavaScript files here -->
 
-  <script src="scripts/route-config.js"></script>
+  <!-- √ TODO Add script tags for your JavaScript files here -->
+  <script src="scripts/app.js"></script>
+  <script src="scripts/app.config.js"></script>
+  <script src="scripts/layout/recipes.controller.js"></script>
+  <script src="scripts/layout/recipe-detail.controller.js"></script>
+  <script src="scripts/services/data.service.js"></script>
 </body>
 
 </html>
