Added delete confirmation view

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
   <script src="scripts/app.config.js"></script>
   <script src="scripts/layout/recipes.controller.js"></script>
   <script src="scripts/layout/recipe-detail.controller.js"></script>
+  <script src="scripts/layout/recipe-delete.controller.js"></script>
   <script src="scripts/services/data.service.js"></script>
 </body>
 
